@@ -33,8 +33,10 @@ UnitTest.asynctest('browser.tinymce.plugins.table.TableCellDialogTest', (success
   const sAssertEvents = (expectedEvents: string[] = defaultEvents) => Step.sync(() => {
     if (events.length > 0) {
       Arr.each(events, (event) => {
-        const tableElm = SugarElement.fromDom(event.table);
-        Assertions.assertEq('Expected events should have been fired', true, SugarNode.isTag('table')(tableElm));
+        if (event.type === 'tablemodified') {
+          const tableElm = SugarElement.fromDom(event.table);
+          Assertions.assertEq('Expected events should have been fired', true, SugarNode.isTag('table')(tableElm));
+        }
       });
     }
     Assertions.assertEq('Expected events should have been fired', expectedEvents, Arr.map(events, (event) => event.type));
@@ -164,7 +166,7 @@ UnitTest.asynctest('browser.tinymce.plugins.table.TableCellDialogTest', (success
         TableTestUtils.sSetDialogValues(advData, true, generalSelectors),
         TableTestUtils.sClickDialogButton('submit dialog', true),
         tinyApis.sAssertContent(advHtml),
-        sAssertEvents(),
+        sAssertEvents([ 'newcell', 'tablemodified' ]),
         sClearEvents
       ]);
     };
@@ -256,7 +258,7 @@ UnitTest.asynctest('browser.tinymce.plugins.table.TableCellDialogTest', (success
         TableTestUtils.sSetDialogValues(emptyData, true, generalSelectors),
         TableTestUtils.sClickDialogButton('submit dialog', true),
         tinyApis.sAssertContent(emptyTable),
-        sAssertEvents(),
+        sAssertEvents([ 'tablemodified' ]),
         sClearEvents
       ]);
     };
@@ -323,7 +325,7 @@ UnitTest.asynctest('browser.tinymce.plugins.table.TableCellDialogTest', (success
         tinyApis.sAssertContent(advHtml),
         TableTestUtils.sOpenTableDialog(tinyUi),
         TableTestUtils.sAssertDialogValues(advData, true, generalSelectors),
-        sAssertEvents(),
+        sAssertEvents([ 'newcell', 'tablemodified' ]),
         sClearEvents
       ]);
     };
@@ -350,6 +352,7 @@ UnitTest.asynctest('browser.tinymce.plugins.table.TableCellDialogTest', (success
     },
     setup: (editor: Editor) => {
       editor.on('tablemodified', logEvent);
+      editor.on('newcell', logEvent);
     }
   }, success, failure);
 });
