@@ -1,4 +1,5 @@
 Version 5.6.1 (TBD)
+    Fixed the `mceTableRowType` and `mceTableCellType` commands not firing `newCell` event #TINY-6692
     Fixed the HTML5 `s` element not recognized when editing or clearing text formatting #TINY-6681
     Fixed an issue where copying and pasting table columns resulted in invalid HTML when using colgroups #TINY-6684
     Fixed an issue where the toolbar would render with the wrong width for inline editors in some situations #TINY-6683
